improvements in sql data models, seed data, nugets update
