# src/ResumeApp.DataAccess.Mongo/Entities/SkillMongoEntity.cs
@@ -12,8 +12,6 @@ namespace ResumeApp.DataAccess.Mongo.Entities
 
 		public string Name { get; set; }
 
-		public string AdditionalInfo { get; set; }
-
 		public string SkillGroup { get; set; }
 	}
 }
