# src/ResumeApp.Models/SkillDto.cs
@@ -9,8 +9,6 @@ namespace ResumeApp.Models
 		[Required]
 		public string Name { get; set; }
 
-		public string AdditionalInfo { get; set; }
-
 		public string SkillGroup { get; set; }
 	}
 }
